@@ -1,6 +1,9 @@
 # ChangeLog for Portage; the Gentoo Linux ports system 
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL v2
 
+  24 Oct 2002; Nicholas Jones <carpaski@gentoo.org> portage.py:
+	Warning touchups. Replaced constants (9) to index("INHERITED").
+
   23 Oct 2002; Nicholas Jones <carpaski@gentoo.org> bin/new*:
   Fix for "running as a root user" bug... code does 'rm -rf /' if
   variables aren't defined in environment... That's a bad thing.
